Fix user show specs so they do not require user_signed_in? call
We can mock the #policy call with a fitting UserPolicy

No idea why that is an issue in tests... it works just fine in dev/production

Anyway, here I found the fix for mocking it:
https://github.com/rspec/rspec-rails/issues/780#issuecomment-293111014

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -38,9 +38,9 @@
             This user remains an enigma - and probably just wants to intrigue you.
         - else
           = @user.description
-        - if user_signed_in? && policy(@user).update?
+        - if policy(@user).update?
           .ui.top.right.attached.circular.label{style: "top: -11px;"}
-            = link_to edit_user_path(params[:id]) do
+            = link_to edit_user_path(@user.id) do
               %i.pen.alternate.blue.icon
   %div.three.wide.right.floated.column
     %div.ui.basic.segment
