Replace southpark images with drawn alternatives

--- a/app/views/guides/partials/_example_conclusion.html.haml
+++ b/app/views/guides/partials/_example_conclusion.html.haml
@@ -26,20 +26,20 @@
         %i.large.red.caret.down.icon
         .content
           .header
-            \-10 Randy Marsh
+            \-10 Eyebrow Rick
           .description
             downvoted 4 hours ago
       .item
         %i.large.green.caret.up.icon
         .content
           .header
-            +5 Strong Woman
+            +5 Shining Sam
           .description
             upvoted 2 days ago
       .item
         %i.large.green.caret.up.icon
         .content
           .header
-            +5 PC Principle
+            +5 Lucy Scarf
           .description
             upvoted 2 days ago
