--- a/app/views/guides/partials/_example_users.html.haml
+++ b/app/views/guides/partials/_example_users.html.haml
@@ -2,9 +2,9 @@
   .card
     .content
       .ui.image
-        = image_tag 'guides/tour/lorde.png'
+        = image_tag 'guides/tour/eyebrow_rick.png'
       .ui.small.header
-        Randy Marsh
+        Eyebrow Rick
       .ui.list
         .item
           %i.icon
@@ -27,9 +27,9 @@
   .card
     .content
       .ui.image
-        = image_tag 'guides/tour/pc_principle.png'
+        = image_tag 'guides/tour/lucy_scarf.png'
       .ui.small.header
-        PC Principle
+        Lucy Scarf
       .ui.list
         .item
           %i.icon
@@ -52,9 +52,9 @@
   .card
     .content
       .ui.image
-        = image_tag 'guides/tour/strong_woman.png'
+        = image_tag 'guides/tour/shining_sam.png'
       .ui.small.header
-        Strong Woman
+        Shining Sam
       .ui.list
         .item
           %i.icon
