--- a/app/views/semantic/_header.html.haml
+++ b/app/views/semantic/_header.html.haml
@@ -16,7 +16,7 @@
       .menu
         = link_to 'Recents', label_stamp_index_path, class: 'item'
         = link_to 'All Domains', domains_path, class: 'item'
-        = link_to 'All Apps', apps_path, class: 'item' if policy(App).index?
+        = link_to 'All Apps', apps_path, class: 'item' if AppPolicy.new(current_user, App).index?
 
   .right.menu
     - if user_signed_in?
