--- a/app/views/devise/mailer/confirmation_instructions.html.haml
+++ b/app/views/devise/mailer/confirmation_instructions.html.haml
@@ -1,4 +1,8 @@
 %p
-  Welcome #{@email}!
+  Welcome #{@resource.username}!
 %p You can confirm your account email through the link below:
 %p= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token)
+
+%p
+  Do not hesitate to ask any questions or give your input
+  = link_to 'in our forums!', forums_url
