Show acceptance reqs for stamp to conclude

--- a/app/views/stamps/partials/_attached_label.html.haml
+++ b/app/views/stamps/partials/_attached_label.html.haml
@@ -1,4 +1,6 @@
-%div{class: "ui large top right attached #{color_for(stamp.state)} label"}
+%div{class: "ui large top right attached #{color_for(stamp.state)} label", data: { tooltip: (required_params_text if @stamp.in_progress?) }}
+  - if @stamp.in_progress?
+    %i.info.circle.icon
   = stamp.state.titleize
   .detail
     = detail_in_words(stamp)
